# nexuscharts

./: .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json  rollup.config.js  tsconfig.json  tsconfig.public.json
.github/workflows/: ci.yml
.mpm/: README.md  agent.md  evaluation.md  logic_tree.md  progress.md  roadmap.md
.mpm/roles/: api_architect.md  graphics_programmer.md  wasm_engineer.md
docs/: api-reference.md  getting-started.md
docs/adr/: 0001-wasm-single-instance-ownership.md
public/: index.html  terminal.html
scripts/: check-public-types.mjs  prepare-public-types.mjs  run-benchmark.mjs
src/: main.cpp
src/core/: data_manager.cpp  data_manager.h
src/graphics/: rendering_engine.cpp  rendering_engine.h
src/math/: camera.cpp  camera.h
test/: benchmark-runner.test.ts  core.test.ts  image-export.test.ts  integration.test.ts  package-exports-smoke.test.ts  public-api-contract.test.ts  public-bundle-smoke.test.ts  source-compatibility.test.ts
ts-src/: index.ts  types.ts
ts-src/core/: NexusChartUpdateBatch.ts  NexusCharts.ts
ts-src/core/analytics/: ObserverAnalytics.ts  ObserverAnalyticsApi.ts
ts-src/core/annotations/: PriceAnnotationApi.ts  PriceAnnotationManager.ts
ts-src/core/config/: ChartConfigurationApi.ts
ts-src/core/data/: DataAdapter.ts
ts-src/core/drawings/: DrawingEngine.ts  DrawingManager.ts  DrawingMenu.ts  DrawingOverlayRenderer.ts
ts-src/core/events/: ChartEventBus.ts  ChartEventSubscriptions.ts
ts-src/core/export/: ImageExport.ts
ts-src/core/indicators/: IndicatorEngine.ts  IndicatorOverlayRenderer.ts  IndicatorPaneManager.ts
ts-src/core/perf/: PerfTracker.ts
ts-src/core/series/: PrimarySeriesGeometry.ts  SeriesManager.ts
ts-src/core/theme/: ChartTheme.ts
ts-src/core/ui/: CandleSelection.ts  ChartNavigationController.ts  ChartViewport.ts  ControlBar.ts  CrosshairOverlay.ts  InteractionController.ts  Persistence.ts  PriceAnnotations.ts  TimeAxisHelpers.ts  TooltipOverlay.ts
ts-src/core/wasm/: NexusWasmBridge.ts
